--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/luxbar.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Test</h1>
+    <header id="luxbar" class="luxbar-fixed">
+        <input type="checkbox" class="luxbar-checkbox" id="luxbar-checkbox"/>
+        <div class="luxbar-menu luxbar-menu-right luxbar-menu-material-amber">
+            <ul class="luxbar-navigation">
+                <li class="luxbar-header">
+                    <a href="#" class="luxbar-brand">LUXBAR</a>
+                    <label class="luxbar-hamburger luxbar-hamburger-doublespin" 
+                    id="luxbar-hamburger" for="luxbar-checkbox"> <span></span> </label>
+                </li>
+                <li class="luxbar-item"><a href="#">Item 1</a></li>
+                <li class="luxbar-item"><a href="#">Item 2</a></li>
+                <li class="luxbar-item"><a href="#">Item 3</a></li>
+                <li class="luxbar-item"><a href="#">Item 4</a></li>
+            </ul>
+        </div>
+    </header>
 </body>
 </html>
