--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="luxbar-menu luxbar-menu-right luxbar-menu-material-yellow">
             <ul class="luxbar-navigation">
                 <li class="luxbar-header">
-                    <a href="#" class="luxbar-brand">LUXBAR</a>
+                    <a href="#" class="luxbar-brand"><img src="https://talk.quwj.com/images/logo-nav.png">趣小组</a>
                     <label class="luxbar-hamburger luxbar-hamburger-doublespin" 
                     id="luxbar-hamburger" for="luxbar-checkbox"> <span></span> </label>
                 </li>
