--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
     <title>Document</title>
 </head>
 <body>
-    <header id="luxbar" class="luxbar-fixed">
+    <nav id="luxbar" class="luxbar-fixed">
         <input type="checkbox" class="luxbar-checkbox" id="luxbar-checkbox"/>
         <div class="luxbar-menu luxbar-menu-right luxbar-menu-material-yellow">
             <ul class="luxbar-navigation">
                 <li class="luxbar-header">
-                    <a href="#" class="luxbar-brand"><img src="https://talk.quwj.com/images/logo-nav.png">趣小组</a>
+                    <a href="#" class="luxbar-brand">
+                        <!-- <img src="https://talk.quwj.com/images/logo-nav.png"> -->
+                        趣小组
+                    </a>
                     <label class="luxbar-hamburger luxbar-hamburger-doublespin" 
                     id="luxbar-hamburger" for="luxbar-checkbox"> <span></span> </label>
                 </li>
@@ -24,6 +27,9 @@
                 <li class="luxbar-item"><a href="#">Item 4</a></li>
             </ul>
         </div>
-    </header>
+    </nav>
+    <div id="root">
+        
+    </div>
 </body>
 </html>
