导航栏初版（测试，非正式样式）

--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
             </form>
             <ul>
                 <li><a href="">[ MAKE ]</a></li>
-                <li><a href="">首页</a></li>
-                <li><a href="">节点</a></li>
+                <li><a href="">分享</a></li>
+                <li><a href="">创造</a></li>
+                <li><a href="">问与答</a></li>
+                <li><a href="">问与答</a></li>
             </ul>
         </div>
         <label for="nav-checkbox"></label>
